--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -1,1 +1,8 @@
-<h2>admin top</h2>
+<h1>管理者注文履歴一覧</h1>
+
+<%= @orders.each do |order| %>
+
+  <p>商品名</p>
+  <span><%= order.shipping_name %></span>
+  
+<% end %>
