--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -4,6 +4,35 @@
   <%= render "public/shared/error_messages", resource: resource %>
 
   <div class="field">
+    <%= f.label :family_name %>
+    <%= f.label :personal_name %><br />
+    <%= f.email_field :family_name, autofocus: true, autocomplete: "family_name" %>
+    <%= f.email_field :personal_name, autofocus: true, autocomplete: "personal_name" %>
+  </div>
+  
+  <div class="field">
+    <%= f.label :family_name_kana %>
+    <%= f.label :personal_name_kana %><br />
+    <%= f.email_field :family_name_kana, autofocus: true, autocomplete: "family_name_kana" %>
+    <%= f.email_field :personal_name_kana, autofocus: true, autocomplete: "personal_name_kana" %>
+  </div>
+
+  <div class="field">
+    <%= f.label :post_code %><br />
+    <%= f.email_field :post_code, autofocus: true, autocomplete: "post_code" %>
+  </div>
+  
+  <div class="field">
+    <%= f.label :address %><br />
+    <%= f.email_field :address, autofocus: true, autocomplete: "address" %>
+  </div>
+  
+  <div class="field">
+    <%= f.label :phone_number %><br />
+    <%= f.email_field :phone_number, autofocus: true, autocomplete: "phone_number" %>
+  </div>
+
+  <div class="field">
     <%= f.label :email %><br />
     <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
   </div>
