--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -1,1 +1,19 @@
-<h2>User Top</h2>
+<h1>User Top</h1>
+  
+<table>
+    <th>ジャンル名検索</th>
+      <tbody>
+        <tr><% @genres.each do |genre| %></tr>
+        <td><%= genre.name %></td>
+          <% end %>
+      </tbody>
+</table>
+
+
+
+<div>ようこそ、ながのCAKEへ！</div>
+<div>このサイトは、ケーキ販売のECサイトになります。</div>
+<div>館員でない方も閲覧はできますが、</div>
+<div>購入には会員登録が必要になります。</div>
+
+  <%#= link_to "すべての商品をみる>", %>
