--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -1,9 +1,24 @@
 <h1>管理者注文履歴一覧</h1>
 
-<%= @orders.each do |order| %>
-  <p>商品名</p>
-  <span><%= order.shipping_name %></span>  
-<% end %>
+  <table class='table table-hover table-inverse'>
+    <thead>
+      <tr>
+        <th>宛名</th>
+        <th>ステータス</th>
+      </tr>
+    </thead>
+    <tbody>
+     <% @orders.each do |order| %>
+      <tr>
+        <td><%= order.shipping_name %></td>
+        <td><%= order.status %></td>
+        <td><%= link_to admin_order_path(order) do %>
+          <%= order.updated_at %>
+        </td>
+          <% end %>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
 
-<h2>admin top</h2>
-  <%= link_to 'index / ユーザ一覧', admin_customers_path %>
+
