--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -9,14 +9,14 @@
         <ul class="navbar-nav ml-auto">
         
 　　　　　<% if customer_signed_in? %>
-
+           
           <li>
             <%= link_to destroy_customer_session_path, method: :delete,class: 'nav-link text-light' do %>
               <i class="fas fa-sign-out-alt"></i> Log out
             <% end %>
           </li>
           <% elsif admin_signed_in? %>
-
+　　　　　　<%= link_to 'index / ユーザ一覧', admin_customers_path %>
           <li>
             <%= link_to destroy_admin_session_path, method: :delete,class: 'nav-link text-light' do %>
               <i class="fas fa-sign-out-alt"></i> Log out
@@ -35,6 +35,8 @@
               <i class="fas fa-sign-in-alt"></i> Log in
             <% end %>
           </li>
+          <%= link_to 'about', about_path %>
+          <%= link_to '商品一覧', products_path %>
         <% end %>
         </ul>
       </div>
