--- a/app/views/admin/products/new.html.erb
+++ b/app/views/admin/products/new.html.erb
@@ -1,8 +1,6 @@
 <div class='container px-5 px-sm-0'>
  <div class='row'>
   <div class='col-md-3'>
-
-<div class="row">
   <div class="col-xs-12">
     <h2 class="head-line title_h2 text-center">商品新規登録</h2>
     <%= form_with(model: @product, url: admin_products_path, method: :post, class: "form-horizontal") do |f| %>
@@ -30,11 +28,19 @@
           <%= f.label :"販売ステータス", class: "col-sm-3 control-label" %>
           <%= f.select :status, [['販売中', true], ['販売停止', false]], prompt: "-- 選択してください --", class: "col-sm-9 status" %>
         </div>
+        <div class="form-group">
+        <%= f.label :image %>
+        <%= f.file_field :image, class: "form-control-file image", accept: 'image/*' %>
+      </div>
         <div class="actions col-xs-7">
   	      <%= f.submit "新規登録", class: "btn btn-primary btn-lg pull-right" %>
         </div>
+        
+        
 
       </div>
     <% end %>
   </div>
+</div>
+</div>
 </div>
