--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,8 +1,13 @@
 <header>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <div class="container">
-      <%= link_to "naganocake", root_path, class:"nav-link text-light" %>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+    <!--<div class="container">-->
+    <div class="container d-flex justify-content-between">
+      
+      <!-- ヘッダ画像 -->
+      <a class="navbar-brand p-3" href="/"><%= image_tag('naganoCake',width:100) %></a>
+      
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
+                    aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       
@@ -12,44 +17,44 @@
 　　　　　<% if customer_signed_in? %>
 
             <!-- 商品一覧 追記2023/04/22　18：30 suzuki -->
-            <li>
+            <li class="nav-item">
               <%= link_to products_path ,class: 'nav-link text-light' do %>
                 <i class="fas fa-products-index-link"></i> Products
               <% end %>
             </li>
 
-            <li>
+            <li class="nav-item">
               <%= link_to destroy_customer_session_path, method: :delete,class: 'nav-link text-light' do %>
                 <i class="fas fa-sign-out-alt"></i> Log out
               <% end %>
             </li>
-          
+
           <!-- admin -->
           <% elsif admin_signed_in? %>
 
             <!-- ユーザ一覧 追記2023/04/23　11：40 suzuki -->
-            <li>
+            <li class="nav-item">
               <%= link_to admin_customers_path,class: 'nav-link text-light' do %>
-                <i class="fas fa-user-list-alt"></i> User list
+                <i class="fas fa-users"></i> User list
               <% end %>
             </li>
             
             <!-- 商品一覧 追記2023/04/23　12：20 suzuki -->
-            <li>
+            <li class="nav-item">
               <%= link_to admin_products_path,class: 'nav-link text-light' do %>
-                <i class="fas fa-products-alt"></i> Products list
+                <i class="fab fa-product-hunt"></i> Products list
               <% end %>
             </li>
             
             <!-- ジャンル 追記2023/04/23　11：40 suzuki -->
-            <li>
+            <li class="nav-item">
               <%= link_to admin_genres_path,class: 'nav-link text-light' do %>
-                <i class="fas fa-genres-alt"></i> Genres list
+                <i class="fas fa-toolbox"></i> Genres list
               <% end %>
             </li>
 
             <!-- sign out -->
-            <li>
+            <li class="nav-item">
               <%= link_to destroy_admin_session_path, method: :delete,class: 'nav-link text-light' do %>
                 <i class="fas fa-sign-out-alt"></i> Log out
               <% end %>
@@ -57,29 +62,29 @@
        
           <% else %>
 
-            <li>
+            <li class="nav-item">
               <%= link_to new_customer_registration_path,class: 'nav-link text-light' do %>
                 <i class="fas fa-user-plus"></i> Sign up
               <% end %>
             </li>
             
-            <li>
+            <li class="nav-item">
               <%= link_to new_customer_session_path ,class: 'nav-link text-light' do %>
-                <i class="fas fa-link"></i> Log in
+                <i class="fas fa-sign-in-alt"></i> Log in
               <% end %>
             </li>
             
             <!-- About 追記2023/04/22　18：30 suzuki -->
-            <li>
+            <li class="nav-item">
               <%= link_to home_about_path ,class: 'nav-link text-light' do %>
-                <i class="fas fa-sign-in-alt"></i> About
+                <i class="fas fa-link"></i> About
               <% end %>
             </li>
             
             <!-- 商品一覧 追記2023/04/22　18：30 suzuki -->
-            <li>
+            <li class="nav-item">
               <%= link_to products_path ,class: 'nav-link text-light' do %>
-                <i class="fas fa-products-index-link"></i> Products
+                <i class="fab fa-product-hunt"></i> Products
               <% end %>
             </li>
 
