--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,19 +1,20 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>LinkToLll</title>
-    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <title>ながのCake - LinkToLll</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-
+    <!--<meta name="viewport" content="width=device-width,initial-scale=1">-->
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <%= stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
-  <body>
+  <body class="d-flex flex-column vh-100">
     <%= render 'layouts/header' %>
-    <%= yield %>
-    
+      <main class="mb-auto">
+      <%= yield %>
+      <p id="notice"><%= notice %></p>
     <%= render 'layouts/footer' %>
   </body>
 </html>
