--- a/app/views/admin/products/edit.html.erb
+++ b/app/views/admin/products/edit.html.erb
@@ -1,23 +1,36 @@
-<h2 class="head-line title_h2 text-center">商品編集</h2>
-<div class="row">
+<%= form_for @product do |f| %>
+  <div class='container'>
+    <div class='row'>
+      <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
+        <h1>商品編集</h1>
 
-  <%= form_for(@product, url: admin_product_path, method: :patch, class: "form-horizontal") do |f| %>
-    <%= render "admin/shared/error_messages", resource: @product%>
-    <div class="col-xs-4">
-      <div class="img_field">
-        <%= image_tag(@product, :image, size: "250x180") %>
-      </div>
-      <div class="form-group">
-	      <%= f.field :image, class: " image" %>
+        <div class="form-group">
+          <%= f.label :"商品名", class: "col-sm-3 control-label" %>
+          <%= f.text_field :name, class: "col-sm-9 form-control-static name" %>
+        </div>
+        <div class="form-group">
+          <%= f.label :"商品画像", class: "col-sm-3 control-label" %>
+          <%= f.file_field :image %>
+        </div>
+        <div class="form-group">
+          <%= f.label :"商品説明", class: "col-sm-3 control-label" %>
+          <%= f.text_area :explanation, class: "col-sm-9 control-label explanation" %>
+        </div>
+        <div class="form-group">
+          <%= f.label :"ジャンル", class: "col-sm-3 control-label" %>
+          <%= f.collection_select(:genre_id, @genres, :id, :name, prompt: "-- 選択してください --", class: "col-sm-9 genre_id") %>
+        </div>
+        <div class="form-group">
+          <%= f.label :"税抜価格", class: "col-sm-3 control-label" %>
+          <%= f.text_field :price, class: "col-sm-3 form-control-static price" %>円
+        </div>
+        <div class="form-group">
+          <%= f.label :"販売ステータス", class: "col-sm-3 control-label" %>
+          <%= f.select :status, [['販売中', true], ['販売停止', false]], prompt: "-- 選択してください --", class: "col-sm-9 is_sale" %>
+        </div>
+        <%= f.submit '更新', class: "btn btn-primary" %>
+
       </div>
     </div>
-
-    <div class="col-xs-6">
-      <%= render "form_product", f: f %>
-      <div class="actions">
-	      <%= f.submit "変更を保存", class: "btn btn-primary pull-right" %>
-      </div>
-
-    </div>
-  <% end %>
-</div>
+  </div>
+<% end %>
