--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -1,5 +1,5 @@
 <h1>User Top</h1>
-  
+
 <table>
     <th>ジャンル名検索</th>
       <tbody>
@@ -16,4 +16,4 @@
 <div>館員でない方も閲覧はできますが、</div>
 <div>購入には会員登録が必要になります。</div>
 
-  <%#= link_to "すべての商品をみる>", %>
+  <%= link_to "すべての商品をみる>",products_path %>
