--- a/app/views/admin/products/edit.html.erb
+++ b/app/views/admin/products/edit.html.erb
@@ -1,8 +1,10 @@
-<%= form_for @product do |f| %>
+<%= form_with model: @product, url:admin_product_path do |f| %>
   <div class='container'>
     <div class='row'>
       <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
         <h1>商品編集</h1>
+        
+        <%= render "admin/shared/error_messages", resource: @product %>
 
         <div class="form-group">
           <%= f.label :"商品名", class: "col-sm-3 control-label" %>
@@ -10,22 +12,22 @@
         </div>
         <div class="form-group">
           <%= f.label :"商品画像", class: "col-sm-3 control-label" %>
-          <%= f.file_field :image %>
+          <%= f.file_field :image, class: "col-sm-9 form-control-static image" %>
         </div>
         <div class="form-group">
           <%= f.label :"商品説明", class: "col-sm-3 control-label" %>
           <%= f.text_area :explanation, class: "col-sm-9 control-label explanation" %>
         </div>
         <div class="form-group">
-          <%= f.label :"ジャンル", class: "col-sm-3 control-label" %>
+          <%= f.label :"ジャンル", class: "col-sm-5 control-label" %>
           <%= f.collection_select(:genre_id, @genres, :id, :name, prompt: "-- 選択してください --", class: "col-sm-9 genre_id") %>
         </div>
         <div class="form-group">
-          <%= f.label :"税抜価格", class: "col-sm-3 control-label" %>
+          <%= f.label :"税抜価格", class: "col-sm-5 control-label" %>
           <%= f.text_field :price, class: "col-sm-3 form-control-static price" %>円
         </div>
         <div class="form-group">
-          <%= f.label :"販売ステータス", class: "col-sm-3 control-label" %>
+          <%= f.label :"販売ステータス", class: "col-sm-5 control-label" %>
           <%= f.select :status, [['販売中', true], ['販売停止', false]], prompt: "-- 選択してください --", class: "col-sm-9 is_sale" %>
         </div>
         <%= f.submit '更新', class: "btn btn-primary" %>
