--- a/app/views/admin/products/new.html.erb
+++ b/app/views/admin/products/new.html.erb
@@ -1,13 +1,11 @@
-<div class='container px-5 px-sm-0'>
+<%= form_with(model: @product, url: admin_products_path, method: :post, class: "form-horizontal") do |f| %>
+<div class='container'>
  <div class='row'>
-  <div class='col-md-3'>
-  <div class="col-xs-12">
-    <h2 class="head-line title_h2 text-center">商品新規登録</h2>
-    <%= form_with(model: @product, url: admin_products_path, method: :post, class: "form-horizontal") do |f| %>
+  <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
+    <h2>商品新規登録</h2>
+    
       <%= render "admin/shared/error_messages", resource: @product %>
       
-        
-      <div class="col-xs-6">
         <div class="form-group">
           <%= f.label :"商品名", class: "col-sm-3 control-label" %>
           <%= f.text_field :name, class: "col-sm-9 form-control-static name" %>
@@ -25,11 +23,11 @@
           <%= f.text_field :price, class: "col-sm-3 form-control-static price" %>円
         </div>
         <div class="form-group">
-          <%= f.label :"販売ステータス", class: "col-sm-3 control-label" %>
+          <%= f.label :"販売ステータス", class: "col-sm-5 control-label" %>
           <%= f.select :status, [['販売中', true], ['販売停止', false]], prompt: "-- 選択してください --", class: "col-sm-9 status" %>
         </div>
         <div class="form-group">
-        <%= f.label :image %>
+        <%= f.label :"商品画像" %>
         <%= f.file_field :image, class: "form-control-file image", accept: 'image/*' %>
       </div>
         <div class="actions col-xs-7">
