--- a/app/views/admin/products/show.html.erb
+++ b/app/views/admin/products/show.html.erb
@@ -1,23 +1,19 @@
-<div class="container">
-　<h2 class="head-line title_h2 text-center admin_product_index">商品詳細</h2>
-　　<div class="row">
-	  <table class='table'>
-	  <tr>
-	  <div id="img_field">
+<div class='container'>
+  <div class='row'>
+    <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
+      <h2>商品詳細</h2>
+	    <div class="field">
+	    	     商品名　　　　　<%= @product.name %>
+	    </div>
+	    <div id="img_field">
 	        <%= image_tag @product.image, size: "300x220", fallback: "no_image.jpg" %>
-	  </div>
-	  </tr>
-	  <tr>
+	    </div>
 	    <div class="field">
 				商品説明　　　　<%= @product.explanation %>
 	    </div>
-	    </tr>
-	    <tr>
 	    <div class="field">
 				ジャンル　　　　<%= @product.genre.name %>
 	    </div>
-	    </tr>
-	    <tr>
 	    <% def price(value) %>
         <%= (value * 1.1).floor.to_s(:delimited) %>
       <% end %>
@@ -26,8 +22,6 @@
 	        								(<%= @product.price.to_s(:delimited) %>円)
 					(税抜価格)
 	    </div>
-	    </tr>
-	    <tr>
 	    <div class="field">
 					販売ステータス
 	        <% if @product.status == true %>
@@ -35,12 +29,10 @@
 					<% elsif @product.status == false %>
 						　<i class="fas fa-bullseye blue"></i>販売停止中
 					<% end %>
-	     </div>
-	     </tr>
-	     <tr>
-		   <div class="actions col-xs-9">
+	    </div>
+		  <div class="actions col-xs-9">
 	      		<%= link_to "編集する", edit_admin_product_path(@product), data: {"turbolinks" => false}, class: "glyphicon glyphicon-pencil btn btn-success pull-right" %>
-	      		</tr>
-	      		</table>
+      </div>
     </div>
   </div>
+</div>
