--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -19,7 +19,7 @@
             <!-- 商品一覧 追記2023/04/22　18：30 suzuki -->
             <li class="nav-item">
               <%= link_to products_path ,class: 'nav-link text-light' do %>
-                <i class="fas fa-products-index-link"></i> Products
+                <i class="fab fa-product-hunt"></i> Products
               <% end %>
             </li>
 
