--- a/app/views/public/orders/new.html.erb
+++ b/app/views/public/orders/new.html.erb
@@ -1,6 +1,6 @@
 <h1>注文情報入力</h1>
   <table>
-    <!--エラー--
+    <!--エラー-->
     <!--<tr><th>支払い方法</th><td><%#= @order.payment_option %></td></tr>
     <tr><th>お届け先</th><td><%#= "〒#{@order.shipping_postcode}" %><br><%#= @order.shipping_address %><br><%#= @order.shipping_name %></td></tr>-->
   </table>
