--- a/app/views/admin/genres/edit.html.erb
+++ b/app/views/admin/genres/edit.html.erb
@@ -4,5 +4,5 @@
   <h2>ジャンル名</h2>
     <%= form_with model: @genre,url: admin_genre_path(@genre.id) do |f| %>
     <%= f.text_field :name %>
-    <%= f.submit "変更を保存"%>
+    <%= f.submit "変更を保存",  data: {"turbolinks" => false}, class: "glyphicon glyphicon-pencil btn btn-success pull-right" %>
     <% end %>
