--- a/app/views/admin/genres/index.html.erb
+++ b/app/views/admin/genres/index.html.erb
@@ -5,7 +5,7 @@
   <h2>ジャンル名</h2>
     <%= form_with model: @genre, url: admin_genres_path do |f| %>
     <%= f.text_field :name %>
-    <%= f.submit "新規登録"%>
+    <%= f.submit "新規登録",  data: {"turbolinks" => false}, class: "glyphicon glyphicon-pencil btn btn-success pull-right" %>
     <% end %>
 
   <div>
@@ -16,7 +16,7 @@
               <% @genres.each do |genre| %></tr>
                 <td>
                   <%= genre.name %>
-                    <%= link_to "編集",edit_admin_genre_path(genre.id) %>
+                    <%= link_to "編集する",edit_admin_genre_path(genre.id),  data: {"turbolinks" => false}, class: "glyphicon glyphicon-pencil btn btn-success pull-right" %>
                 </td>
               <% end %>
           </tbody>
