--- a/app/views/admin/customers/show.html.erb
+++ b/app/views/admin/customers/show.html.erb
@@ -1,36 +1,29 @@
-<h2>ユーザ詳細</h2>
+<div class="container">
+  <h2>ユーザ詳細</h2>
+</div>
+<div class="container text-center">
+  <div class="row">
+    <div class="col-md-5 text-right">
+      <p><strong>姓名:</strong></p>
+      <p><strong>セイメイ:</strong></p>
+      <p><strong>郵便番号:</strong></p>
+      <p><strong>住所:</strong></p>
+      <p><strong>email:</strong></p>
+      <p><strong>電話番号:</strong></p>
+      <p><strong>ステータス:</strong></p>
+    </div>
+    <div class="col-md-7 text-left">
+      <p><%= @customer.family_name %> <%= @customer.personal_name %></p>
+      <p><%= @customer.family_name_kana %> <%= @customer.personal_name_kana %></p>
+      <p><%= @customer.post_code %></p>
+      <p><%= @customer.address %></p>
+      <p><%= @customer.email %></p>
+      <p><%= @customer.phone_number %></p>
+      <p><%= @customer.status ? "有効" : "退会" %></p>
+      <p><%= link_to 'ユーザ情報変更', edit_admin_customer_path(@customer), class: "btn btn-primary" %></p>
+    </div>
+  </div>
+  <%= link_to '管理者TOP', admin_home_top_path, class: "btn btn-secondary me-2" %>
+  <%= link_to 'カスタマー一覧', admin_customers_path, class: "btn btn-secondary me-2" %>
+</div>
 
-
-  <table>
-    <thead>
-      <tr>
-        <th>姓名</th>
-        <th>セイメイ</th>
-        <th>郵便番号</th>
-        <th>住所</th>
-        <th>email</th>
-        <th>電話番号</th>
-        <th>ステータス</th>
-        <th colspan=3></th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td><%= @customer.family_name %> <%= @customer.personal_name %></td>
-        <td><%= @customer.family_name_kana %> <%= @customer.personal_name_kana %></td>
-        <td><%= @customer.post_code %></td>
-        <td><%= @customer.address %></td>
-        <td><%= @customer.email %></td>
-        <td><%= @customer.phone_number %></td>
-        <td><%= @customer.status ? "有効" : "退会" %></td>
-        <td><%= link_to 'edit', edit_admin_customer_path(@customer) %></td>
-      </tr>  
-    </tbody>
-  </table>
-  
-
-
-<br>
-<br>
-
-<%= link_to 'index', admin_customers_path %>
