--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -6,30 +6,30 @@
   <div class="field">
     <%= f.label :family_name %>
     <%= f.label :personal_name %><br />
-    <%= f.email_field :family_name, autofocus: true, autocomplete: "family_name" %>
-    <%= f.email_field :personal_name, autofocus: true, autocomplete: "personal_name" %>
+    <%= f.text_field :family_name, autofocus: true, autocomplete: "family_name" %>
+    <%= f.text_field :personal_name, autofocus: true, autocomplete: "personal_name" %>
   </div>
   
   <div class="field">
     <%= f.label :family_name_kana %>
     <%= f.label :personal_name_kana %><br />
-    <%= f.email_field :family_name_kana, autofocus: true, autocomplete: "family_name_kana" %>
-    <%= f.email_field :personal_name_kana, autofocus: true, autocomplete: "personal_name_kana" %>
+    <%= f.text_field :family_name_kana, autofocus: true, autocomplete: "family_name_kana" %>
+    <%= f.text_field :personal_name_kana, autofocus: true, autocomplete: "personal_name_kana" %>
   </div>
 
   <div class="field">
     <%= f.label :post_code %><br />
-    <%= f.email_field :post_code, autofocus: true, autocomplete: "post_code" %>
+    <%= f.text_field :post_code, autofocus: true, autocomplete: "post_code" %>
   </div>
   
   <div class="field">
     <%= f.label :address %><br />
-    <%= f.email_field :address, autofocus: true, autocomplete: "address" %>
+    <%= f.text_field :address, autofocus: true, autocomplete: "address" %>
   </div>
   
   <div class="field">
     <%= f.label :phone_number %><br />
-    <%= f.email_field :phone_number, autofocus: true, autocomplete: "phone_number" %>
+    <%= f.text_field :phone_number, autofocus: true, autocomplete: "phone_number" %>
   </div>
 
   <div class="field">
