--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -1,2 +1,45 @@
 <h1>カート内商品</h1>
 
+<div class="container">
+  <h2 class="head-line title_h2 text-center admin_product_index">商品一覧</h2>
+  <div class="row">
+    <div>
+
+      <table class="table table-hover table-bordered table-condensed">
+        <thead>
+          <tr>
+            <th>商品ID</th>
+            <th>商品名</th>
+            <th>商品画像</th>
+            <th>税抜価格</th>
+            <th>数量</th>
+            <th>ジャンル</th>
+            <th>ステータス</th>
+          </tr>
+        </thead>
+        <tbody>
+          <% @cart_items.each do |cart_item| %>
+          <tr>
+            <td><%= cart_item.product.id%></td>
+            <td><%= cart_item.product.name%></td>
+             <td>
+	            <%= image_tag cart_item.product.image, size: '300x200' %>
+	          </td>
+	          <td><%= form_with model: @cart_item do |f| %>
+	           　 <%= f.select :quantity, *[1..99] %>
+	           　 <th><%= f.submit "変更" %></th>
+                <% end %>
+            </td>
+            <td><%= cart_item.product.genre.name %></td>
+            <td>
+              <% if cart_item.product.status == true %>
+                <p><i class="fas fa-bullseye red"></i>販売中</p>
+              <% elsif cart_item.product.status == false %>
+                <p><i class="fas fa-bullseye blue"></i>販売停止中</p>
+              <% end %>
+            </td>
+            <td><%= cart_item.quantity %></td>
+            <td><%= link_to '削除', cart_item_path(cart_item), method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger"%></td>
+            <% end %>
+             <%= link_to "カートを空にする", all_destroy_cart_items_path, method: :delete,class: "btn btn-danger btn-sm" %>
+            
