--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -1,7 +1,8 @@
 <br>
 <div class="container">
   <h2>会員登録</h2>
-  <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { class: "form-signup" }) do |f| %>
+  <%#= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { class: "form-signup" }) do |f| %>
+  <%= form_for(resource, as: resource_name, url: customer_registration_path, html: { class: "form-signup" }) do |f| %>
     <%= render "public/shared/error_messages", resource: resource %>
 
     <div class="row">
