--- a/app/views/public/orders/new.html.erb
+++ b/app/views/public/orders/new.html.erb
@@ -17,7 +17,7 @@
 	<br>
 	<%= f.radio_button :shipping_postal_code_option, 1 %>
 	<%= f.label :shipping_postal_code, "登録済住所から選択" %>
-	<%= f.collection_select :shipping_postal_code , current_customer.shipping_addresses, :id, :shipping_postal_code , :include_blank => "選択してください" %>
+	<%= f.collection_select :shipping_postal_code , current_customer.shipping_addresses, :id, :post_code , :include_blank => "選択してください" %>
 
 	<br>
 	<%= f.radio_button :address_option, 2 %>
@@ -26,11 +26,14 @@
 
 	<%= f.label :postal_code, "郵便番号" %>
 	<%= f.text_field :postal_code %>
+	<%= text_field_tag("shipping_address[postal_code]") %>
 	<br>
 
 	<%= f.label :order_address, "住所" %>
-	<%= f.text_field :order_address %>
+	<%= text_field_tag("shipping_address[address]") %>
 	<br>
+		<%= f.label :order_address, "住所" %>
+	<%= text_field_tag("shipping_address[name]") %>
 
 	<%= f.submit "確認画面へ進む" , class:"btn btn-primary" %>
 
