--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -11,6 +11,7 @@
             <th>商品ID</th>
             <th>商品名</th>
             <th>商品画像</th>
+            <th>税込価格</th>
             <th>税抜価格</th>
             <th>数量</th>
             <th>ジャンル</th>
@@ -25,7 +26,9 @@
              <td>
 	            <%= image_tag cart_item.product.image, size: '300x200' %>
 	          </td>
-	          <td><%= form_with model: @cart_item do |f| %>
+	          <td><%= cart_item.product.price %>円</td>
+	           <td><%= cart_item.product.add_tax_price %>円</td>
+	          <td><%= form_with model: cart_item, url: cart_item_path(cart_item) do |f| %>
 	           　 <%= f.select :quantity, *[1..99] %>
 	           　 <th><%= f.submit "変更" %></th>
                 <% end %>
@@ -41,5 +44,9 @@
             <td><%= cart_item.quantity %></td>
             <td><%= link_to '削除', cart_item_path(cart_item), method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger"%></td>
             <% end %>
-             <%= link_to "カートを空にする", all_destroy_cart_items_path, method: :delete,class: "btn btn-danger btn-sm" %>
-            
+             <%= link_to "カートを空にする", all_destroy_cart_items_path, method: :delete,class: "btn btn-danger btn-sm" %><br>
+            <br>
+
+             <%= link_to "買い物を続ける", products_path, class: "btn btn-danger btn-sm" %><br>
+             <br>
+             <%= link_to "情報入力へ進む", new_order_path, class: "btn btn-danger btn-sm" %>
