--- a/app/views/public/products/show.html.erb
+++ b/app/views/public/products/show.html.erb
@@ -1,7 +1,7 @@
 <div class='container'>
   <div class='row'>
     <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
-      
+
       <h2>商品詳細</h2>
 	    <div class="field">
 	    	     商品名　　　　　<%= @product.name %>
@@ -15,11 +15,9 @@
 	    <div class="field">
 				ジャンル　　　　<%= @product.genre.name %>
 	    </div>
-	    <% def price(value) %>
-        <%= (value * 1.1).floor.to_s(:delimited) %>
-      <% end %>
+
 	    <div class="field">
-					税込価格　　　　<%= price(@product.price) %>円
+					税込価格　　　　<%= @product.add_tax_price %>円
 	        								(<%= @product.price.to_s(:delimited) %>円)
 					(税抜価格)
 	    </div>
