--- a/app/views/public/shipping_addresses/index.html.erb
+++ b/app/views/public/shipping_addresses/index.html.erb
@@ -1,4 +1,4 @@
- <h2>配送先指定画面</h2>
+ <h2>配送先登録/一覧</h2>
 
 <%= form_with model:@shipping_address do |f| %>
   <div class="form-group">
@@ -14,7 +14,7 @@
     <%= f.text_field :address %>
   </div>
   <div class="form-group">
-    <%= f.submit '登録' %>
+    <%= f.submit '新規登録' %>
   </div>
 <% end %>
 
