--- a/app/views/public/orders/thanks.html.erb
+++ b/app/views/public/orders/thanks.html.erb
@@ -1,1 +1,8 @@
-<h1>ご注文ありがとうございました！</h1>
+<div class="container">
+  <div class="jumbotron">
+    <h1 class="text-center">ご注文ありがとうございました！</h1>
+  </div>
+  <div class="text-center">
+    <img src="/assets/6d077207c0454441a027e48f8acbd45b.jpg" alt="" class="img-fluid">
+  </div>
+</div>
