--- a/app/views/public/orders/log.html.erb
+++ b/app/views/public/orders/log.html.erb
@@ -15,12 +15,12 @@
           <% @total_amount = 0 %>
           <% @cart_items.each do |cart_item| %>
             <tr>
-              <td class="align-middle" style="word-break:break-all"><%= attachment_image_tag cart_item.item, :image, format: 'jpeg', fallback: "no_image.jpg", size: "50x50" %><%= cart_item.item.name %></td>
-              <td class="align-middle"><%= change_price_excluding_tax(cart_item.item.price_excluding_tax).to_s(:delimited) %></td>
-              <td class="align-middle"><%= cart_item.amount %></td>
-              <td class="align-middle"><%= (amount = change_price_excluding_tax(cart_item.item.price_excluding_tax * cart_item.amount)).to_s(:delimited) %></td>
+              <td class="align-middle" style="word-break:break-all"><%= image_tag cart_item.product.image, format: 'jpeg', fallback: "no_image.jpg", size: "50x50" %><%= cart_item.product.name %></td>
+              <td class="align-middle"><%= (cart_item.product.price*1.1).round %></td>
+              <td class="align-middle"><%= cart_item.quantity %></td>
+              <td class="align-middle"><%=(cart_item.product.price*1.1*cart_item.quantity.to_i).round  %></td>
             </tr>
-            <% @total_amount += amount %>
+            <% @total_amount += (cart_item.product.price*1.1*cart_item.quantity.to_i).round %>
           <% end %>
         </tbody>
       </table>
@@ -41,11 +41,11 @@
   <div class="row">
     <div class="col-sm-10 px-sm-0 mx-auto">
       <%= form_with model: @order,  local:true do |f| %>
-        <%= f.hidden_field :shipping_postcode, :value => @order.shipping_postal_code %>
+        <%= f.hidden_field :shipping_postal_code, :value => @order.shipping_postal_code %>
         <%= f.hidden_field :shipping_address, :value => @order.shipping_address %>
         <%= f.hidden_field :shipping_name, :value => @order.shipping_name %>
-        <%= f.hidden_field :total_payment, :value => @total_billing_amount %>
-        <%= f.hidden_field :payment_option, :value => @order.payment_method %>
+        <%= f.hidden_field :amount_billed, :value => @total_billing_amount %>
+        <%= f.hidden_field :payment_method, :value => @order.payment_method %>
         <div class="text-center mb-3"><%= f.submit "注文を確定する", class: "btn btn-success" %></div>
       <% end %>
     </div>
