--- a/app/views/public/orders/new.html.erb
+++ b/app/views/public/orders/new.html.erb
@@ -1,46 +1,70 @@
-<h1>注文情報入力</h1>
+<div class="container">
+  <div class="row my-3">
+    <div class="col-sm-10 offset-sm-1">
+      <h1>注文情報入力</h1>
+    </div>
+  </div>
+  <%= form_with model: @order, url: orders_log_path, method: :get, local: true do |f| %>
+    <div class="row">
+      <div class="col-sm-10 offset-sm-1">
+        <div class="form-group">
+          <%= f.label :payment, "支払い方法" %>
+          <br>
+          <%= f.radio_button :payment, :クレジットカード, checked: "checked" %>
+          <%= f.label :payment, "クレジットカード" %>
+          <br>
+          <%= f.radio_button :payment, :銀行振込 %>
+          <%= f.label :payment, "銀行振込" %>
+        </div>
+      </div>
+    </div>
 
-<%= form_with model: @order, url: orders_log_path, method: :get,local: true do |f| %>
-	<%= f.label :payment, "支払い方法" %>
-	<br>
-	<%= f.radio_button :payment,:クレジットカード,  checked: "checked" %>
-	<%= f.label :payment, "クレジットカード" %>
-	<br>
-	<%= f.radio_button :payment, :銀行振込 %>
-	<%= f.label :payment, "銀行振込" %>
-	<br>
-	<%= f.label :address, "お届け先" %>
-	<br>
-	<%= f.label :order_address, "ご自身の住所" %>
-	<%= @order.postage %>
-	<%= @order.shipping_postal_code %>
-	<br>
-	<%= f.radio_button :shipping_postal_code_option, 1 %>
-	<%= f.label :shipping_postal_code, "登録済住所から選択" %>
-	<%= f.collection_select :shipping_postal_code , current_customer.shipping_addresses, :id, :post_code , :include_blank => "選択してください" %>
+<div class="row">
+  <div class="col-sm-10 offset-sm-1">
+    <div class="form-group">
+      <%= f.label :address, "お届け先" %>
+      <br>
+      <%= f.label :order_address, "ご自身の住所" %>
+      <%= @order.postage %>
+      <%= @order.shipping_postal_code %>
+      <br>
+      <%= f.radio_button :shipping_postal_code_option, 1 %>
+      <%= f.label :shipping_postal_code, "登録済住所から選択" %>
+      <%= f.collection_select :shipping_postal_code, current_customer.shipping_addresses, :id, :post_code, include_blank: "選択してください" %>
+      <br>
+      <%= f.radio_button :address_option, 2 %>
+      <%= f.label :order_address, "新しいお届け先" %>
+      <br>
+      <br>
+      <%= f.label :postal_code, "郵便番号" %>
+      <%= text_field_tag("shipping_address[postal_code]", nil, class: "form-control") %>
+      <br>
+      <%= f.label :order_address, "住所" %>
+      <%= text_field_tag("shipping_address[address]", nil, class: "form-control") %>
+      <br>
+      <br>
+      <%= f.label :order_address, "名前" %>
+      <%= text_field_tag("shipping_address[name]", nil, class: "form-control") %>
+    </div>
+  </div>
+</div>
 
-	<br>
-	<%= f.radio_button :address_option, 2 %>
-	<%= f.label :order_address, "新しいお届け先" %>
-	<br>
-
-	<%= f.label :postal_code, "郵便番号" %>
-	<%= f.text_field :postal_code %>
-	<%= text_field_tag("shipping_address[postal_code]") %>
-	<br>
-
-	<%= f.label :order_address, "住所" %>
-	<%= text_field_tag("shipping_address[address]") %>
-	<br>
-		<%= f.label :order_address, "住所" %>
-	<%= text_field_tag("shipping_address[name]") %>
-
-	<%= f.submit "確認画面へ進む" , class:"btn btn-primary" %>
-
+<div class="row">
+  <div class="col-sm-10 offset-sm-1">
+    <%= f.submit "確認画面へ進む", class: "btn btn-primary" %>
+  </div>
+</div>
 <% end %>
 
+</div>
 
-  <table>
+
+
+
+
+
+
+  <!--<table>
     <!--<tr><th>支払い方法</th><td><%#=@order.payment_method %></td></tr>
     <tr><th>お届け先</th><td><%#= "〒#{@order.shipping_postal_code}" %><br><%#= @order.shipping_address %><br><%#= @order.shipping_name %></td></tr>
   </table>-->
