--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -15,6 +15,13 @@
         <ul class="navbar-nav ml-auto">
           <!-- customer -->
 　　　　　<% if customer_signed_in? %>
+　　　　　  
+　　　　　  <!-- マイページ 追記2023/04/25　18：30 satoru -->
+　　　　　  <li class="nav-item">
+              <%= link_to customers_path,class: 'nav-link text-light' do %>
+                <i class="fas fa-user"></i> マイページ
+              <% end %>
+            </li>
 
             <!-- 商品一覧 追記2023/04/22　18：30 suzuki -->
             <li class="nav-item">
