--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -3,19 +3,23 @@
   <table class='table table-hover table-inverse'>
     <thead>
       <tr>
-        <th>宛名</th>
-        <th>ステータス</th>
+        <th>注文日時</th>
+        <th>購入者</th>
+        <th>注文個数</th>
+        <th>注文ステータス</th>
       </tr>
     </thead>
     <tbody>
      <% @orders.each do |order| %>
       <tr>
-        <td><%= order.shipping_name %></td>
-        <td><%= order.status %></td>
-        <td><%= link_to admin_order_path(order) do %>
+         <td><%= link_to admin_orders_path(order) do %>
           <%= order.updated_at %>
+           <% end %>
+        <td><%= order.shipping_name %></td>
+      　<td><%= order.order_products %></td>
+        <td><%= order.status %></td>
         </td>
-          <% end %>
+
       </tr>
     <% end %>
   </tbody>
