--- a/app/views/admin/orders/show.html.erb
+++ b/app/views/admin/orders/show.html.erb
@@ -1,28 +1,42 @@
-<h1>注文詳細</h1>
+<h1>注文情報詳細</h1>
 
 <table class='table table-hover table-inverse'>
 <thead>
   <tr>
-    <th>名前</th>
-    <th>郵便番号</th>
-    <th>住所</th>
+    <th>注文日</th>
+    <th>配送先</th>
     <th>支払方法</th>
-    <th>請求金額</th>
-    <th>送料</th>
+    <th>ステータス</th>
   </tr>
 </thead>
   <tbody>
     <tr>
-      <td><%= link_to admin_customer_path(@customer) do %>
+       <td><%= @order.updated_at %></td>
+        <td><%= @order.shipping_postal_code %><br>
+            <%= @order.shipping_address %><br>
+           <%= link_to admin_customer_path(@customer) do %>
          　<%= @order.shipping_name %>
-      </td>
-          <% end %>
-      <td><%= @order.shipping_postal_code %></td>
-      <td><%= @order.shipping_address %></td>
+           <% end %>
+        </td>
       <td><%= @order.payment_method %></td>
-      <td><%= @order.amount_billed %></td>
-      <td><%= @order.postage %></td>
-       <td><%= @order.status %></td>
+      <td><%= @order.status %></td>
+    </tr>
+  </tbody>
+</table>
+
+<h2>請求情報</h2>
+<table class='table table-hover table-inverse'>
+<thead>
+  <tr>
+    <th>商品合計</th>
+    <th>配送料</th>
+    <th>ご請求額</th>
+  </tr>
+</thead>
+  <tbody>
+    <tr>
+  　　 <td><%= @order.amount_billed %></td>
+    　<td><%= @order.postage %></td>
     </tr>
   </tbody>
 </table>
