--- a/app/views/public/products/index.html.erb
+++ b/app/views/public/products/index.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <h2 class="head-line title_h2 text-center admin_product_index">商品一覧</h2>
+  <h2 class="head-line title_h2 text-center admin_product_index">商品一覧(全<%=@products.count %>件)</h2>
   <div class="row">
     <div>
 
