--- a/app/views/admin/genres/index.html.erb
+++ b/app/views/admin/genres/index.html.erb
@@ -1,24 +1,39 @@
- <%= flash[:notice] %>
-
-  <h1>ジャンル一覧・追加</h1>
-
-  <h2>ジャンル名</h2>
-    <%= form_with model: @genre, url: admin_genres_path do |f| %>
-    <%= f.text_field :name %>
-    <%= f.submit "新規登録",  data: {"turbolinks" => false}, class: "glyphicon glyphicon-pencil btn btn-success pull-right" %>
-    <% end %>
-
-  <div>
-    <table>
-      <th>ジャンル</th>
-        <tbody>
-          <tr class="item-box">
-              <% @genres.each do |genre| %></tr>
-                <td>
-                  <%= genre.name %>
-                    <%= link_to "編集する",edit_admin_genre_path(genre.id),  data: {"turbolinks" => false}, class: "glyphicon glyphicon-pencil btn btn-success pull-right" %>
-                </td>
-              <% end %>
+<br>
+<%= flash[:notice] %>
+<br>
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-md-1">
+    </div>
+    <div class="col-md-4">
+      <h2>ジャンル一覧・追加</h2>
+      <%= form_with model: @genre, url: admin_genres_path, html: {class: "form-inline"} do |f| %>
+        <div class="form-group">
+          <%= f.label :name, "ジャンル名" %>
+          <%= f.text_field :name, class: "form-control" %>
+        </div>
+        <%= f.submit "新規登録",  data: {"turbolinks" => false}, class: "btn btn-success" %>
+      <% end %>
+      <br>
+      <div class="table-responsive">
+        <table class="table table-hover">
+          <thead>
+            <tr>
+              <th>ジャンル</th>
+              <th></th>
+            </tr>
+          </thead>
+          <tbody>
+            <% @genres.each do |genre| %>
+              <tr>
+                <td><%= genre.name %></td>
+                <td><%= link_to "編集する", edit_admin_genre_path(genre.id),  data: {"turbolinks" => false}, class: "btn btn-success" %></td>
+              </tr>
+            <% end %>
           </tbody>
         </table>
+      </div>
+    </div>
+    <div class="col-md-7"></div>
   </div>
+</div>
