--- a/app/views/admin/products/index.html.erb
+++ b/app/views/admin/products/index.html.erb
@@ -28,21 +28,26 @@
               <% end %>
             </td>
             <td>
-	            <%= image_tag product.image, size: '300x200' %>
-	          </td>
-            <td class="text-right"><%= number_to_currency(product.price, unit: "¥") %></td>
+              <%= image_tag product.image, size: '300x200' %>
+            </td>
+            <td class="text-right"><%= number_to_currency(product.price, unit: "¥", precision: 0) %></td>
             <td><%= product.genre.name %></td>
             <td>
               <% if product.status == true %>
-                <p><i class="fas fa-bullseye red"></i>販売中</p>
+                <!--<p><i class="fas fa-bullseye red"></i>販売中</p>-->
+                <i class="fas fa-bullseye" style="color:green;"></i> <span style="color:green;font-weight:bold;">販売中</span>
               <% elsif product.status == false %>
-                <p><i class="fas fa-bullseye blue"></i>販売停止中</p>
+                <!--<p><i class="fas fa-bullseye blue"></i>販売停止中</p>-->
+                <i class="fas fa-times" style="color:red;"></i> <span style="color:red;font-weight:bold;">販売停止中</span>
               <% end %>
             </td>
           </tr>
           <% end %>
         </tbody>
       </table>
+
+      <%= paginate @products %>
+      
     </div>
   </div>
 </div>
