--- a/app/views/admin/products/new.html.erb
+++ b/app/views/admin/products/new.html.erb
@@ -1,44 +1,67 @@
+<br>
 <%= form_with(model: @product, url: admin_products_path, method: :post, class: "form-horizontal") do |f| %>
+<br>
 <div class='container'>
- <div class='row'>
-  <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
-    <h2>商品新規登録</h2>
-    
+  <div class='row'>
+    <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
+      <h2>商品新規登録</h2>
+          
       <%= render "admin/shared/error_messages", resource: @product %>
-      
-        <div class="form-group">
-          <%= f.label :"商品名", class: "col-sm-3 control-label" %>
-          <%= f.text_field :name, class: "col-sm-9 form-control-static name" %>
-        </div>
-        <div class="form-group">
-          <%= f.label :"商品説明", class: "col-sm-3 control-label" %>
-          <%= f.text_area :explanation, class: "col-sm-9 control-label explanation" %>
-        </div>
-        <div class="form-group">
-          <%= f.label :"ジャンル", class: "col-sm-3 control-label" %>
-          <%= f.collection_select(:genre_id, @genres, :id, :name, prompt: "-- 選択してください --", class: "col-sm-9 genre_id") %>
-        </div>
-        <div class="form-group">
-          <%= f.label :"税抜価格", class: "col-sm-3 control-label" %>
-          <%= f.text_field :price, class: "col-sm-3 form-control-static price" %>円
-        </div>
-        <div class="form-group">
-          <%= f.label :"販売ステータス", class: "col-sm-5 control-label" %>
-          <%= f.select :status, [['販売中', true], ['販売停止', false]], prompt: "-- 選択してください --", class: "col-sm-9 status" %>
-        </div>
-        <div class="form-group">
-        <%= f.label :"商品画像" %>
-        <%= f.file_field :image, class: "form-control-file image", accept: 'image/*' %>
-      </div>
-        <div class="actions col-xs-7">
-  	      <%= f.submit "新規登録", class: "btn btn-primary btn-lg pull-right" %>
-        </div>
-        
-        
 
+      <div class="form-group row">
+        <%= f.label :"商品画像", class: "col-sm-4 col-form-label text-sm-right" %>
+        <div class="col-sm-8">
+          <%= f.file_field :image, class: "form-control-file image", accept: 'image/*' %>
+        </div>
       </div>
-    <% end %>
+
+      <div class="form-group row">
+        <%= f.label :"商品名", class: "col-sm-4 col-form-label text-sm-right" %>
+        <div class="col-sm-8">
+          <%= f.text_field :name, class: "form-control name" %>
+        </div>
+      </div>
+      
+      <div class="form-group row">
+        <%= f.label :"商品説明", class: "col-sm-4 col-form-label text-sm-right" %>
+        <div class="col-sm-8">
+          <%= f.text_area :explanation, class: "form-control explanation" %>
+        </div>
+      </div>
+      
+      <div class="form-group row">
+        <%= f.label :"ジャンル", class: "col-sm-4 col-form-label text-sm-right" %>
+        <div class="col-sm-8">
+          <%= f.collection_select(:genre_id, @genres, :id, :name, prompt: "-- 選択してください --", class: "form-control genre_id") %>
+        </div>
+      </div>
+      
+      <div class="form-group row">
+        <%= f.label :"税抜価格", class: "col-sm-4 col-form-label text-sm-right" %>
+        <div class="col-sm-8">
+          <div class="input-group">
+            <%= f.text_field :price, class: "form-control price" %>
+            <div class="input-group-append">
+              <span class="input-group-text">円</span>
+            </div>
+          </div>
+        </div>
+      </div>
+      
+      <div class="form-group row">
+        <%= f.label :"販売ステータス", class: "col-sm-4 col-form-label text-sm-right" %>
+        <div class="col-sm-8">
+          <%= f.select :status, [['販売中', true], ['販売停止', false]], prompt: "-- 選択してください --", class: "form-control status" %>
+        </div>
+      </div>
+      
+      <div class="form-group row">
+        <div class="col-sm-9 offset-sm-3">
+          <%= f.submit "新規登録", class: "btn btn-success btn-lg pull-right" %>
+        </div>
+      </div>
+      
+    </div>
+      <% end %>
   </div>
-</div>
-</div>
 </div>
