--- a/app/views/public/customers/show.html.erb
+++ b/app/views/public/customers/show.html.erb
@@ -1,3 +1,4 @@
+<br>
 <div class="container">
   <div class="row">
     <div class="col-md-3">
@@ -15,19 +16,18 @@
         </li>
       </ul>
     </div>
+    
     <div class="col-md-9">
       <h3>会員情報</h3>
       <table class="table table-striped">
         <tbody>
           <tr>
             <th>氏名</th>
-            <td><%= @customer.personal_name %></td>
-            <td><%= @customer.family_name %></td>
+            <td><%= @customer.family_name %> <%= @customer.personal_name %></td>
           </tr>
           <tr>
             <th>カナ</th>
-            <td><%= @customer.personal_name_kana %></td>
-            <td><%= @customer.family_name_kana %></td>
+            <td><%= @customer.family_name_kana %> <%= @customer.personal_name_kana %></td>
           </tr>
           <tr>
             <th>郵便番号</th>
