--- a/app/views/public/homes/about.html.erb
+++ b/app/views/public/homes/about.html.erb
@@ -1,7 +1,13 @@
+<br>
+<br>
+
+
+
 <div class="container">
   <div class="row">
-    <div class="col-md-12">
-      <h2>About</h2>
+    <div class="col-md-12 text-center">
+      <h2 style="font-family: cursive;">About</h2>
+      <br>
       <p>ながのCAKEは全国発送可能なケーキ屋さんです。</p>
       <p>お子様からお年寄りの方までお召し上がりいただけるよう、様々なバリエーションをご用意しております。</p>
       <p>また、全国へ発送可能ですので『いつ』でも『どこ』でもご注文いただけます。</p>
