--- a/app/views/public/products/show.html.erb
+++ b/app/views/public/products/show.html.erb
@@ -1,3 +1,4 @@
+<br>
 <div class='container'>
   <div class='row'>
     <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
@@ -7,7 +8,7 @@
 	    	     商品名　　　　　<%= @product.name %>
 	    </div>
 	    <div id="img_field">
-	        <%= image_tag @product.image, size: "300x220", fallback: "no_image.jpg" %>
+	        <%= image_tag @product.image, class: "img-fluid", style: "max-width: 100%; height: auto;", fallback: "no_image.jpg" %>
 	    </div>
 	    <div class="field">
 				商品説明　　　　<%= @product.explanation %>
@@ -24,9 +25,11 @@
 	    <div class="field">
 					販売ステータス
 	        <% if @product.status == true %>
-						　<i class="fas fa-bullseye red"></i>販売中
+						<!--<p><i class="fas fa-bullseye red"></i>販売中</p>-->
+            <i class="fas fa-bullseye" style="color:green;"></i> <span style="color:green;font-weight:bold;">販売中</span>
 					<% elsif @product.status == false %>
-						　<i class="fas fa-bullseye blue"></i>販売停止中
+            <!--<p><i class="fas fa-bullseye blue"></i>販売停止中</p>-->
+            <i class="fas fa-times" style="color:red;"></i> <span style="color:red;font-weight:bold;">販売停止中</span>
 					<% end %>
 	    </div>
       <div class="actions col-xs-9">
@@ -38,9 +41,6 @@
           <% end %>
          </div>
       </div>
-    </div>
-  </div>
-</div>
     </div>
   </div>
 </div>
