--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -61,7 +61,7 @@
             
             <!-- 注文履歴一覧 追記2023/04/25　22：26 suzuki -->
             <li class="nav-item">
-              <%= link_to admin_orders_path,class: 'nav-link text-light' do %>
+              <%= link_to admin_root_path,class: 'nav-link text-light' do %>
                 <i class="fas fa-clipboard-list"></i> 注文履歴一覧
               <% end %>
             </li>
